# frappe-portal-tailwind

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml  tailwind.config.js
.github/workflows/: ci.yml
tailwind/: create_about_page.py  create_features_page.py  create_marketplace_page.py  hooks.py  setup_feature_items.py  setup_marketplace_items.py
tailwind/tailwind/doctype/contact_request/: contact_request.js  contact_request.json  contact_request.py  test_contact_request.py
tailwind/tailwind/doctype/feature_item/: feature_item.js  feature_item.json  feature_item.py
tailwind/tailwind/doctype/marketplace_item/: marketplace_item.js  marketplace_item.json  marketplace_item.py
tailwind/tailwind/web_form/contact/: contact.html  contact.json  contact.py
tailwind/templates/: layout.html
tailwind/templates/pages/: features.html  features.py  marketplace.html  marketplace.py
tailwind/www/: about.html  features.html  home.html  marketplace.html
tailwind/www/images/: erp.avif  feature 1.avif  feature 2.avif  logo.avif
